torrc and ssh_config

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,3 +7,14 @@ server {
 		index index.html;
 	}
 }
+
+http {
+	server {
+		listen 80 4242;
+		ft_onion localhost;
+		location / {
+			root /usr/share/nginx/html;
+			index index.html;
+		}
+	}
+}
