docker keeps exiting - maybe add yml file??

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,14 @@
-server {
-	listen 80 4242;
-	server_name localhost;
-
-	location / {
-		root /usr/share/nginx/html;
-		index index.html;
-	}
-}
+events {}
 
 http {
-	server {
-		listen 80 4242;
-		ft_onion localhost;
-		location / {
-			root /usr/share/nginx/html;
-			index index.html;
-		}
-	}
+    server {
+        listen 80;
+        server_name localhost;
+
+        # Serve static files from the root of your HTML directory
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+        }
+    }
 }
