need to fix styling and check SSH

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,5 +10,11 @@ http {
             root /usr/share/nginx/html;
             index index.html;
         }
+        # location /style.css {
+        #     root /usr/share/nginx/html;
+        # }
+        # location /image.png {
+        #     root /usr/share/nginx/html;
+        # }
     }
 }
