WE HAVE DONUTS BABYYYYY - nginx mime.type for the winnnnn

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,13 @@
 events {}
 
 http {
+    default_type  application/octet-stream;
+types {
+    text/html                                        html htm shtml;
+    text/css                                         css;
+    image/png                                        png;
+}
+
     server {
         listen 80;
         server_name localhost;
@@ -10,11 +17,10 @@ http {
             root /usr/share/nginx/html;
             index index.html;
         }
-        # location /style.css {
-        #     root /usr/share/nginx/html;
-        # }
-        # location /image.png {
-        #     root /usr/share/nginx/html;
-        # }
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            root /usr/share/nginx/html;
+            access_log off;  # Optional: Turn off access logs for static assets
+            expires 30d;     # Cache static assets for 30 days
+        }
     }
 }
